# rust-api-db-app

./: .gitignore  Cargo.toml  README.md
migrations/2024-08-01-201000_initial_migration/: up.sql
migrations/2024-08-02-223853_add_post_category/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
